# ChineseChess

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/common/: constants.h
include/game/: game.h
include/pos/: position.h
include/side/: side.h
include/stones/: stone_base.h  stones.h
source/game/: CMakeLists.txt  game.cpp
source/side/: CMakeLists.txt  side.cpp
source/stones/: CMakeLists.txt  stones.cpp
src/: main.cpp
src/data_struct/: position.h  position.hpp
src/enums/: stone_side_enum.h  stone_side_enum.hpp  stone_type_enum.hpp
src/headers/: constants.h  game.h  side.h  stone_base.h  stone_base.hpp  stones.h  stones.hpp  test.hpp
src/source/: game.cpp  side.cpp  stones.cpp  test.cpp
